issue-17: get/set prefix, notif channel id (guild scoped)